--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -8,8 +8,9 @@
 	<script type="text/javascript" src="vue.js"></script>
 </head>
 <body>
-	<header>\(\LaTeX\) Editor</header>
-	<div id="toolbar">
+<header>\(\LaTeX\) Editor
+<embed src="Icons/Help.svg" type="image/svg+xml" width="40px" onclick="alert()"/></header>
+<div id="toolbar">
 	<div id="tabs">
 		<ul>
 			<li id="Tab1" onmouseenter="showbox(1)" onmouseleave="hidebox(1)">
@@ -82,10 +83,13 @@
 		<input id="colorbox" type="color" value="#FF0000" v-model="color">
 		<button onclick="insertSymb('\\color{'+document.getElementById('colorbox').value+'}{text}',0,false)">Insert color</button>
 	</div>
-	</div>
-	<div id="text">
-		<textarea id="input" placeholder="Input TeX formula here." v-model="formula"></textarea>
-		<div id="output">$${}$$</div>
-	</div>
-	<script type="text/javascript" src="LaTeX editor.js"></script>
+</div>
+<div id="text">
+	<textarea id="input" placeholder="Input TeX formula here." v-model="formula"></textarea>
+	<div id="output">$${}$$</div>
+</div>
+<div id="history">
+	<button>Push current formula</button>
+</div>
+<script type="text/javascript" src="LaTeX editor.js"></script>
 </body>
