--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -89,7 +89,13 @@
 	<div id="output">$${}$$</div>
 </div>
 <div id="history">
-	<button>Push current formula</button>
+	<transition-group name="hislist" tag="ul">
+		<li v-for="(formula,index) in formulas" v-bind:id="index" v-bind:key="index" class="hislist-item">
+			<a v-on:click="removeformula(index)">×</a>
+			<p v-on:click="importformula(index)" v-bind:title="formula.name">$${{formula.formula}}$$</p>
+		</li>
+	</transition-group>
+	<button v-on:click="pushformula()">Push current formula</button>
 </div>
 <script type="text/javascript" src="LaTeX editor.js"></script>
 </body>
