Adding history now triggers mathjax update
Quick summary of next-step plans:
- Fix: when the history panel is folded, it's still visible when the page is scrolled to the right, which causes trouble on a mobile browser; font size problems; deletion of history item not resulting in update
- Add: custom math structure; custom commands; help panel; different display styles; settings panel; edit and reorder history items
- Improve: the dialog boxes now use the default js template; the history panel should be scrolled without affecting the main page; **Important** export math as picture file

--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -90,7 +90,7 @@
 </div>
 <div id="history">
 	<button id="foldBtn" v-on:click="hide()">{{icon}}</button>
-	<transition-group name="hislist" tag="ul">
+	<transition-group id="hislist" name="hislist" tag="ul">
 		<li v-for="(formula,index) in formulas" v-bind:id="index" v-bind:key="index" class="hislist-item">
 			<a v-on:click="removeformula(index)">×</a>
 			<p v-on:click="importformula(index)" v-bind:title="formula.name">$${{formula.formula}}$$</p>
