--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -3,100 +3,145 @@
 	<meta charset="utf-8" />
 	<title>LaTeX editor</title>
 	<link rel="stylesheet" href="LaTeX editor style.css">
-	<script type="text/javascript" 
-	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=default"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=default"></script>
 	<script type="text/javascript" src="vue.js"></script>
 </head>
 <body>
-<header>\(\LaTeX\) Editor
-<embed src="Icons/Help.svg" type="image/svg+xml" width="40px" onclick="alert()"/></header>
-<div id="toolbar">
-	<div id="tabs">
-		<ul>
-			<li id="Tab1" onmouseenter="showbox(1)" onmouseleave="hidebox(1)">
-				<a href="#">Symbols</a>
-				<div id="Panel1">
-					<table id="symboltab">
-						<tr v-for="(row,r) in symbols">
-							<td v-for="(symbol,c) in row">
-								<a href="#" v-on:click="add(1,r,c)" v-bind:title="symbol">\({{symbol}}\)</a>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</li>
-			<li id="Tab2" onmouseenter="showbox(2)" onmouseleave="hidebox(2)">
-				<a href="#">Operators</a>
-				<div id="Panel2">
-					<table id="optab">
-						<tr v-for="(row,r) in operators">
-							<td v-for="(operator,c) in row">
-								<a href="#" v-on:click="add(2,r,c)" v-bind:title="operator">\({{operator}}\)</a>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</li>
-			<li id="Tab3" onmouseenter="showbox(3)" onmouseleave="hidebox(3)">
-				<a href="#">Structures</a>
-				<div id="Panel3">
-					<table id="structtab">
-						<tr v-for="(row,r) in structures">
-							<td v-for="(structure,c) in row">
-								<a href="#" v-on:click="add(3,r,c)" v-bind:title="structure">\[{{structure}}\]</a>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</li>
-			<li id="Tab4" onmouseenter="showbox(4)" onmouseleave="hidebox(4)">
-				<a href="#">Arrows</a>
-				<div id="Panel4">
-					<table id="arrowtab">
-						<tr v-for="(row,r) in arrows">
-							<td v-for="(arrow,c) in row">
-								<a href="#" v-on:click="add(4,r,c)" v-bind:title="arrow">\({{arrow}}\)</a>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</li>
-			<li id="Tab5" onmouseenter="showbox(5)" onmouseleave="hidebox(5)">
-				<a href="#">Fonts</a>
-				<div id="Panel5">
-					<table id="fonttab">
-						<tr v-for="(row,r) in fonts">
-							<td v-for="(font,c) in row">
-								<a href="#" v-on:click="add(5,r,c)" v-bind:title="font">\({{font}}\)</a>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</li>
-		</ul>
+	<header>
+		\(\LaTeX\) Editor
+		<div id="HelpIcon"><img src="Icons/Help.svg" width="40px" onclick="showHelp()" /></div>
+	</header>
+	<div id="Helppanel">
+		<a id="closeHelp" class="closeBtn" onclick="hideHelp()">×</a>
+		<div id="helpText">
+			<h1>Help</h1>
+			<p>Stuck? Don't know how to implement what you have in mind? Here are some sources you may find useful: </p>
+			<a href="https://tex.stackexchange.com" target="_blank">The TeX Stack Exchange</a>
+			<br><a href="https://docs.mathjax.org/en/latest/input/tex/index.html" target="_blank">About MathJax</a>
+			<h2>About this webpage</h2>
+			<p>This is a webpage designed for real-time formula edition that unfortunately isn't provided
+				in most TeX softwares. It uses MathJax to render the formula, whose syntax is very much akin
+				to that of LaTeX, except having much fewer symbols and environments. See the links above for
+				more detailed information about both.</p>
+			<p>On the left is the <b>tool bar</b>. Every tab has a drop-down list that contains a variety of
+				pre-defined TeX symbols and structures. Click on any of them to have it added to the input box.
+				For most symbols, selecting a range of text will result in that region be overriden with the
+				new content; but there are a few exceptions.</p>
+			<ul>
+				<li><i>Symbols</i> and <i>arrows</i> always override the selected value;</li>
+				<li>All <i>operators</i> will be inserted before the selected value, and has brackets to enclose it;</li>
+				<li>If the <i>structure</i> has an "x" or "xyz", that's where the selected text will be inserted;</li>
+				<li>If the <i>structure</i> is a huge operator (e.g. \(\sum_a^b\)), or the limit \(\lim_{a\to b}\) in
+					specific, the operator will be inserted in front of the selected text like how an <i>operator</i>
+					would, except without brackets;</li>
+				<li>All <i>fonts</i> will be applied to the selected value; if there's none, the dummy text is added.</li>
+			</ul>
+			<p>Directly below them are the font size control and color control. Type in the desired font size
+				(>10), and it will be applied to the output text. Unfortunately, if the output is updated, the
+				size is restored and you'll have to re-enter the size value. The color chooser works like the
+				<i>fonts</i>: you click on the color box and choose a color first, then select a range of text
+				and have the color be applied to that specific place.</p>
+			<p>In the very center is the input box. You type in something, and the typesetted formula will be
+				displayed below it, or occasionally, an exapserated error message instead. Very neat.</p>
+			<p>To the right is the <i>history panel</i>, which currently only supports static equations.</p>
+			<p>When you have finished working on a long equation, you may want to save it somewhere; simply press
+				the "push current formula" button, and your equation will be added to the list. The name you entered
+				can be seen when you hover your cursor over the formula. Next time you want to use it, click on it
+				and it will be written in the input box. (And overriding the preexisting content. If you want to keep
+				your work in progress, make sure you've saved that beforehand! ) Deletion currently is not so neat:
+				don't panic when something else disappears instead of what you intended -- that's a MathJax update
+				problem. Reload the page, and everything will be fine.</p>
+		</div>
 	</div>
-	<div id="fontsetting">
-		<label for="sizebox">Font size:</label>
-		<input id="sizebox" v-model="fontsize">
-		<label for="sizebox">pt</label>
-		<label for="colorbox" id="colorlabel">Color:</label>
-		<input id="colorbox" type="color" value="#FF0000" v-model="color">
-		<button onclick="insertSymb('\\color{'+document.getElementById('colorbox').value+'}{text}',0,false)">Insert color</button>
+	<div id="toolbar">
+		<div id="tabs">
+			<ul>
+				<li id="Tab1" onmouseenter="showbox(1)" onmouseleave="hidebox(1)">
+					<a href="#">Symbols</a>
+					<div id="Panel1">
+						<table id="symboltab">
+							<tr v-for="(row,r) in symbols">
+								<td v-for="(symbol,c) in row">
+									<a href="#" v-on:click="add(1,r,c)" v-bind:title="symbol">\({{symbol}}\)</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</li>
+				<li id="Tab2" onmouseenter="showbox(2)" onmouseleave="hidebox(2)">
+					<a href="#">Operators</a>
+					<div id="Panel2">
+						<table id="optab">
+							<tr v-for="(row,r) in operators">
+								<td v-for="(operator,c) in row">
+									<a href="#" v-on:click="add(2,r,c)" v-bind:title="operator">\({{operator}}\)</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</li>
+				<li id="Tab3" onmouseenter="showbox(3)" onmouseleave="hidebox(3)">
+					<a href="#">Structures</a>
+					<div id="Panel3">
+						<table id="structtab">
+							<tr v-for="(row,r) in structures">
+								<td v-for="(structure,c) in row">
+									<a href="#" v-on:click="add(3,r,c)" v-bind:title="structure">\[{{structure}}\]</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</li>
+				<li id="Tab4" onmouseenter="showbox(4)" onmouseleave="hidebox(4)">
+					<a href="#">Arrows</a>
+					<div id="Panel4">
+						<table id="arrowtab">
+							<tr v-for="(row,r) in arrows">
+								<td v-for="(arrow,c) in row">
+									<a href="#" v-on:click="add(4,r,c)" v-bind:title="arrow">\({{arrow}}\)</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</li>
+				<li id="Tab5" onmouseenter="showbox(5)" onmouseleave="hidebox(5)">
+					<a href="#">Fonts</a>
+					<div id="Panel5">
+						<table id="fonttab">
+							<tr v-for="(row,r) in fonts">
+								<td v-for="(font,c) in row">
+									<a href="#" v-on:click="add(5,r,c)" v-bind:title="font">\({{font}}\)</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div id="fontsetting">
+			<label for="sizebox">Font size:</label>
+			<input id="sizebox" v-model="fontsize">
+			<label for="sizebox">pt</label>
+			<label for="colorbox" id="colorlabel">Color:</label>
+			<input id="colorbox" type="color" value="#FF0000" v-model="color">
+			<button onclick="insertSymb('\\color{'+document.getElementById('colorbox').value+'}{text}',0,false)">Insert color</button>
+		</div>
 	</div>
-</div>
-<div id="text">
-	<textarea id="input" placeholder="Input TeX formula here." v-model="formula"></textarea>
-	<div id="output">$${}$$</div>
-</div>
-<div id="history">
-	<button id="foldBtn" v-on:click="hide()">{{icon}}</button>
-	<transition-group id="hislist" name="hislist" tag="ul">
-		<li v-for="(formula,index) in formulas" v-bind:id="index" v-bind:key="index" class="hislist-item">
-			<a v-on:click="removeformula(index)">×</a>
-			<p v-on:click="importformula(index)" v-bind:title="formula.name">$${{formula.formula}}$$</p>
-		</li>
-	</transition-group>
-	<button id="pushBtn" v-on:click="pushformula()">Push current formula</button>
-</div>
-<script type="text/javascript" src="LaTeX editor.js"></script>
+	<div id="text">
+		<textarea id="input" placeholder="Input TeX formula here." v-model="formula"></textarea>
+		<div id="output">$${}$$</div>
+	</div>
+	<div id="history">
+		<button id="foldBtn" v-on:click="hide()">{{icon}}</button>
+		<div id="historypanel">
+			<transition-group id="hislist" name="hislist" tag="ul">
+				<li v-for="(formula,index) in formulas" v-bind:id="index" v-bind:key="index" class="hislist-item">
+					<a v-on:click="removeformula(index)" class="closeBtn">×</a>
+					<p v-on:click="importformula(index)" v-bind:title="formula.name">$${{formula.formula}}$$</p>
+				</li>
+			</transition-group>
+			<button id="pushBtn" v-on:click="pushformula()">Push current formula</button>
+		</div>
+	</div>
+	<script type="text/javascript" src="LaTeX editor.js"></script>
 </body>
