Added overlay layer for help panel

--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -11,6 +11,7 @@
 		\(\LaTeX\) Editor
 		<div id="HelpIcon"><img src="Icons/Help.svg" width="40px" onclick="showHelp()" /></div>
 	</header>
+	<div class="overlay"></div>
 	<div id="Helppanel">
 		<a id="closeHelp" class="closeBtn" onclick="hideHelp()">×</a>
 		<div id="helpText">
