--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -2,6 +2,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title>LaTeX editor</title>
+	<link rel="icon" href="Icons/Icon.png">
+	<link rel="apple-touch-icon" href="Icons/Icon.png">
 	<link rel="stylesheet" href="LaTeX editor style.css">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=default"></script>
 	<script type="text/javascript" src="vue.js"></script>
@@ -132,9 +134,6 @@
 			</ul>
 		</div>
 		<div id="fontsetting">
-			<label for="sizebox">Font size:</label>
-			<input id="sizebox" v-model="fontsize">
-			<label for="sizebox">pt</label>
 			<input id="colorbox" type="color" value="#FF0000" v-model="color">
 			<button onclick="insertSymb({disp:'\\color{'+document.getElementById('colorbox').value+'}{text}',
 							left:'\\color{'+document.getElementById('colorbox').value+'}{',right:'}'})">Insert color</button>
@@ -147,6 +146,15 @@
 	<div id="history">
 		<button id="foldBtn" v-on:click="hide()">{{icon}}</button>
 		<div id="historypanel">
+			<div id="topbar">
+				<ul id="icons">
+					<li id="L1"><a href="#"><img src="Icons/Icon_1.svg" width="25px" onclick="toFront(1)" /></a></li>
+					<li id="L2"><a href="#"><img src="Icons/Icon_2.svg" width="25px" onclick="toFront(2)" /></a></li>
+					<li id="L3"><a href="#"><img src="Icons/Icon_3.svg" width="25px" onclick="toFront(3)" /></a></li>
+					<li id="L4"><a href="#"><img src="Icons/Icon_4.svg" width="25px" onclick="toFront(4)" /></a></li>
+				</ul>
+			</div>
+			<div id="menu1" class="menu">
 			<transition-group id="hislist" name="hislist" tag="ul">
 				<li v-for="(formula,index) in formulas" v-bind:id="index" v-bind:key="index" class="hislist-item">
 					<a v-on:click="removeformula(index)" class="closeBtn">×</a>
@@ -154,6 +162,21 @@
 				</li>
 			</transition-group>
 			<button id="pushBtn" v-on:click="pushformula()">Push current formula</button>
+			</div>
+			<div id="menu2" class="menu">
+				<br>Menu 2 still under construction
+			</div>
+			<div id="menu3" class="menu">
+				<br>The saying goes: 
+				<br><b>百度一下，你就知道。</b>
+				<br><br><br><a href="https://www.baidu.com" target="_blank"><img src="Icons/Baidu.jpeg" width="310px" /></a>
+			</div>
+			<div id="menu4" class="menu">
+				<br>
+				<label for="sizebox">Font size:</label>
+				<input id="sizebox" v-model="fontsize">
+				<label for="sizebox">pt</label>
+			</div>
 		</div>
 		<div id="Nameinput" class="dialog">
 			<p>Please enter a name for this formula: </p>
