--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -11,13 +11,13 @@
 <body>
 	<header>
 		\(\LaTeX\) Editor
-		<div id="HelpIcon"><img src="Icons/Help.svg" width="40px" onclick="showDialog('Helppanel')" /></div>
+		<div id="HelpIcon"><img src="Icons/Help.svg" width="40px" onclick="showDialog('Helppanel',true)" /></div>
 	</header>
 	<div class="overlay"></div>
 	<div id="toolbar">
 		<div id="tabs">
 			<ul>
-				<li id="Tab1" onmouseenter="showbox(1)" onmouseleave="hidebox(1)">
+				<li id="Tab1" onmouseenter="showbox(1,true)" onmouseleave="showbox(1,false)">
 					<a href="#">Symbols</a>
 					<div id="Panel1">
 						<table id="symboltab">
@@ -29,7 +29,7 @@
 						</table>
 					</div>
 				</li>
-				<li id="Tab2" onmouseenter="showbox(2)" onmouseleave="hidebox(2)">
+				<li id="Tab2" onmouseenter="showbox(2,true)" onmouseleave="showbox(2,false)">
 					<a href="#">Operators</a>
 					<div id="Panel2">
 						<table id="optab">
@@ -41,7 +41,7 @@
 						</table>
 					</div>
 				</li>
-				<li id="Tab3" onmouseenter="showbox(3)" onmouseleave="hidebox(3)">
+				<li id="Tab3" onmouseenter="showbox(3,true)" onmouseleave="showbox(3,false)">
 					<a href="#">Structures</a>
 					<div id="Panel3">
 						<table id="structtab">
@@ -53,7 +53,7 @@
 						</table>
 					</div>
 				</li>
-				<li id="Tab4" onmouseenter="showbox(4)" onmouseleave="hidebox(4)">
+				<li id="Tab4" onmouseenter="showbox(4,true)" onmouseleave="showbox(4,false)">
 					<a href="#">Arrows</a>
 					<div id="Panel4">
 						<table id="arrowtab">
@@ -65,7 +65,7 @@
 						</table>
 					</div>
 				</li>
-				<li id="Tab5" onmouseenter="showbox(5)" onmouseleave="hidebox(5)">
+				<li id="Tab5" onmouseenter="showbox(5,true)" onmouseleave="showbox(5,false)">
 					<a href="#">Fonts</a>
 					<div id="Panel5">
 						<table id="fonttab">
@@ -77,7 +77,7 @@
 						</table>
 					</div>
 				</li>
-				<li id="Tab6" onmouseenter="showbox(6)" onmouseleave="hidebox(6)">
+				<li id="Tab6" onmouseenter="showbox(6,true)" onmouseleave="showbox(6,false)">
 					<a href="#">Styles</a>
 					<div id="Panel6">
 						<table id="stytab">
@@ -125,17 +125,24 @@
 				<br>
 				<table id="catalog">
 					<tr><td><b>Written as</b></td><td><b>Parsed as</b></td></tr>
-					<tr v-for="shortcut in shortcuts">
+					<tr v-for="(shortcut,index) in shortcuts">
 						<td><code>{{shortcut.short}}</code></td>
 						<td><code>{{shortcut.cut}}</code></td>
+						<td><img src="Icons/Delete.svg" width="20px" v-on:click="removeSC(index)" /></td>
 					</tr>
 				</table>
-				<button class="addBtn" onclick="showDialog('AddSC')">Add new shortcut</button>
+				<button class="addBtn" onclick="showDialog('AddSC',true)">Add new shortcut</button>
 			</div>
 			<div id="menu3" class="menu">
 				<br>The saying goes: 
 				<br><b>百度一下，你就知道。</b>
-				<br><br><br><a href="https://www.baidu.com" target="_blank"><img src="Icons/Baidu.jpeg" width="310px" /></a>
+				<form action="http://www.baidu.com/s" method="GET" target="_blank">
+					<img src="Icons/Baidu.png" width="200px" />
+					<input id="url" type="text" name="wd" size="38" />
+					<input id="submitBtn" type="submit" value="百度一下"/>
+					<input type="hidden" name="ie" value="utf-8" />
+					<input type="hidden" name="tn" value="ace" />
+				</form>
 			</div>
 			<div id="menu4" class="menu">
 				<br>
@@ -152,7 +159,7 @@
 		</div>
 		<div id="AddSC" class="dialog">
 			<label for="short">\</label><input id="short" placeholder="The shorthand"></input>
-			<br><label for="cut">\</label><input id="cut" placeholder="What it stands for"></input>
+			<br><input id="cut" placeholder="What it stands for"></input>
 			<br><button class="cancel" v-on:click="proceedAddingSC(false)">Cancel</button>
 			<button class="confirm" v-on:click="proceedAddingSC(true)">Confirm</button>
 		</div>
@@ -164,7 +171,7 @@
 			<p>This is a webpage designed for real-time <b><i>formula</i></b> (be ware: this is NOT for entire LaTeX documents)
 				edition. It uses MathJax to render the formula, whose syntax is very much akin to that of LaTeX, except 
 				having much fewer symbols and environments. See the links above for more detailed information about both.</p>
-			<br><button class="confirm" onclick="hideDialog('Helppanel')">Confirm</button>
+			<br><button class="confirm" onclick="showDialog('Helppanel',false)">Confirm</button>
 		</div>
 	</div>
 	<script type="text/javascript" src="LaTeX editor.js"></script>
