--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -124,7 +124,7 @@
 			<div id="menu2" class="menu">
 				<br>
 				<table id="catalog">
-					<tr><td><b>Written as</b></td><td><b>Parsed as</b></td></tr>
+					<tr><th>Written as</th><th>Parsed as</th></tr>
 					<tr v-for="(shortcut,index) in shortcuts">
 						<td><code>{{shortcut.short}}</code></td>
 						<td><code>{{shortcut.cut}}</code></td>
