Switched to custom macro provided by Math Jax

--- a/LaTeX editor.html
+++ b/LaTeX editor.html
@@ -93,8 +93,7 @@
 		</div>
 		<div id="fontsetting">
 			<input id="colorbox" type="color" value="#FF0000" v-model="color">
-			<button onclick="insertSymb({disp:'\\color{'+document.getElementById('colorbox').value+'}{text}',
-							left:'\\color{'+document.getElementById('colorbox').value+'}{',right:'}'})">Insert color</button>
+			<button onclick="insertSymb({disp:'\\color{'+document.getElementById('colorbox').value+'}{text}',left:'\\color{'+document.getElementById('colorbox').value+'}{',right:'}'})">Insert color</button>
 		</div>
 	</div>
 	<div id="text">
